# django-openADR2b-vtn

./: .gitignore  README.md  pyproject.toml
scripts/: poetry_scripts.py
src/core/: settings.py  urls.py
src/openADR2b_vtn/: apps.py  renderers.py  tests.py  urls.py  views.py
src/openADR2b_vtn/templates/: EiRegisterParty.xml
